# hikvision2numpy

./: CMakeLists.txt  hikvisionpy.i  library.cpp  library.h
demo/: example.py  hikvisionpy.py
incCn/: HCNetSDK.h  plaympeg4.h
